# zuru_img_generation

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
result/: README.md
scripts/: run_two_image_with_lora.py
src/zuru_img_generation/: cli.py  config.py
src/zuru_img_generation/data/: dataset.py  preprocess.py
src/zuru_img_generation/demo/: two_image_demo.py
src/zuru_img_generation/evaluation/: metrics.py
src/zuru_img_generation/inference/: pipeline.py
src/zuru_img_generation/training/: lora_train.py  model_factory.py
src/zuru_img_generation/utils/: image_ops.py  io.py  prompting.py
